# linqpp

./: CMakeLists.txt  LICENSE  README.md  build.cmd
inc/: enumerable.hpp  pch.h
src/: CMakeLists.txt  main.cpp  select.cpp  where.cpp
